
Jul 22 2000 -   Added req.add_handler (dynamic handler registration)

Jul 18 2000 -   Added PythonEnablePdb
		ChildExitHandler now properly calls Py_Finalize()
		python_handler is now cumulative rather than overriding

Jul 04 2000 -   2.4.1 Released. Mostly bug fixes. Should be pretty stable.

Jun 20 2000 -   2.4 Released.

Jun 17 2000 -   Started the tutorial.html.

Jun 11 2000 -   Stephane Bidoul's thread-safe win32 changes put in. As part
		of this, all chdir()'s are gone and now instead of '.', the
		file path is prepended to pythonpath.

Jun  8 2000 -   2.3 Released.

Jun  7 2000 -	PythonImport now works.

Jun  5 2000 - 	PythonDebug and other on/off type handlers are now of type FLAG
		so they require an argument of On or Off. 